--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "start": "source .env && npm run config && ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
     "clean": "ionic-app-scripts clean",
     "build-default": "ionic-app-scripts build",
+    "prepare:ios": "ionic cordova platform add ios@6.0.0",
+    "build:ios": "ionic cordova build ios --target=iPhone-8-Plus",
+    "build:web": "ionic-app-scripts build",
+    "emulate:ios": "ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
+    "emulate:web": "ionic-app-scripts serve --nobrowser",
     "lint": "ionic-app-scripts lint",
     "format": "node_modules/.bin/prettier --write ./src/**/*.{html,scss,ts,json}",
     "config": "ts-node ./scripts/create-configs.ts --environment=local",
@@ -50,7 +55,6 @@
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "4.20.0",
-    "@ionic-native/firebase": "^4.20.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/keyboard": "^4.20.0",
@@ -71,9 +75,9 @@
     "audit-filter": "^0.5.0",
     "await-to-js": "^2.1.1",
     "call-number": "^1.0.1",
-    "cordova-ios": "^5.0.1",
+    "cordova-ios": "^6.0.0",
     "cordova-open-native-settings": "^1.5.2",
-    "cordova-plugin-add-swift-support": "^2.0.2",
+    "cordova-plugin-add-swift-support": "2.0.2",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.1.0",
@@ -81,10 +85,10 @@
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-exit": "^1.0.3",
     "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-firebase": "^2.0.5",
-    "cordova-plugin-inappbrowser": "^3.2.0",
+    "cordova-plugin-firebasex": "8.0.1",
+    "cordova-plugin-inappbrowser": "git+https://github.com/apache/cordova-plugin-inappbrowser.git",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^2.5.3",
+    "cordova-plugin-ionic-webview": "5.0.0",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-secure-storage": "^3.0.2",
@@ -92,7 +96,7 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-socialsharing": "^5.6.8",
-    "cordova-sqlite-storage": "^2.6.0",
+    "cordova-sqlite-storage": "5.1.0",
     "core-js": "^2.5.7",
     "es6-promise-plugin": "^4.2.2",
     "fs-extra": "^9.0.1",
@@ -169,7 +173,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-firebase": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
